Adiciona cad. usuario via cli e endpoing de sigin q retorna token jwt
